---------------------------------------------------------------------------------------------------
Version: 0.10.6
Date: ????
  Bugfixes:
    - Minor issue fixed (remove obsolete saved info)
---------------------------------------------------------------------------------------------------
Version: 0.10.5
Date: 2022-11-06
  Bugfixes:
    - Fixed interactions with dragging belt
  Changes:
    - Removed new staged build gui
    - Improved locale/descriptions
---------------------------------------------------------------------------------------------------
Version: 0.10.4
Date: 2022-11-04
  Features:
    - Nothing important
---------------------------------------------------------------------------------------------------
Version: 0.10.3
Date: 2022-11-04
  Bugfixes:
    - Fix broken state after Q-building.
---------------------------------------------------------------------------------------------------
Version: 0.10.2
Date: 2022-11-02
  Changes:
    - The stage move tool's "Bring to current stage" can be activated with reverse-select as well as alt-select.
  Bugfixes:
    - Fixed error when building entities over a preview.
    - Fixed incorrect handling of disallowed entity dollying.
---------------------------------------------------------------------------------------------------
Version: 0.10.1
Date: 2022-10-31
  Bugfixes:
    - Fixed entities not updating after creating "empty" control behavior for belts and inserters.
    - Fixed allowing preview entities to be dollied.
---------------------------------------------------------------------------------------------------
Version: 0.10.0
Date: 2022-10-30
  Features:
    - Added the "Stage Move" tool. See the mod portal description for more info.
  Changes:
    - The "Move entity to current stage" shortcut now works on preview entities, and is ignored on settings remnants.
---------------------------------------------------------------------------------------------------
Version: 0.9.1
Date: 2022-10-29
  Changes: