@@ -2,6 +2,7 @@
 Version: 0.10.6
 Date: ????
   Bugfixes:
+    - Fix loaders being in the wrong direction when created in other stages.
     - Minor issue fixed (remove obsolete saved info)
 ---------------------------------------------------------------------------------------------------
 Version: 0.10.5
